--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.7",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "element-ui": "^2.4.11",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.10"
+  },
+  "engines": {
+    "node": "8.10.0"
   }
 }
